--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,14 +4,26 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+
+	<!-- Slides -->
 	<servlet>
-		<servlet-name>PrezPush</servlet-name>
-		<servlet-class>nfrancois.prezpush.PrezPushServlet</servlet-class>
+		<servlet-name>GoogleSlidesV2Servlet</servlet-name>
+		<servlet-class>nfrancois.prezpush.servlet.GoogleSlidesV2Servlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>PrezPush</servlet-name>
-		<url-pattern>/prezpush</url-pattern>
+		<servlet-name>GoogleSlidesV2Servlet</servlet-name>
+		<url-pattern>/googlev2/*</url-pattern>
 	</servlet-mapping>
+	<!-- Slides Remote -->
+	<servlet>
+		<servlet-name>DispatchMessageServlet</servlet-name>
+		<servlet-class>nfrancois.prezpush.servlet.DispatchMessageServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DispatchMessageServlet</servlet-name>
+		<url-pattern>/dispatchmessage</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
