--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -33,6 +33,16 @@
 		<servlet-name>DispatchMessageServlet</servlet-name>
 		<servlet-class>nfrancois.prezpush.servlet.DispatchMessageServlet</servlet-class>
 	</servlet>
+	
+	<!-- Login -->
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>nfrancois.prezpush.servlet.LoginServlet</servlet-class>
+	</servlet>	
 
 	<!-- Welcome file -->
 	<welcome-file-list>
